@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.163 2005/05/03 02:17:46 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.164 2005/05/03 17:12:37 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  3 May 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Fixed timezone code to not link to /mnt/gentoo/usr/share/zoneinfo/blah. Fix
+  _edit_config()
 
   2 May 2005; Andrew Gaffney <agaffney@gentoo.org>
   Exceptions received in CC are logged before being passed to the FE. Added
